Refactor some code to improve understanding